src/main/java/example/dsg_be/global/error/excpetion/BusinessException.java
package example.dsg_be.global.error.excpetion;

import lombok.Getter;

@Getter
public class BusinessException extends RuntimeException {
    private final ErrorCode errorCode;

    public BusinessException(ErrorCode errorCode) {
        super(errorCode.getMessage());
        this.errorCode = errorCode;
    }
}
